# Scanner

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  Scanner.idl  repo.ior  run_all.sh  run_test.pl
contextmap/: Scanner-DSL-template.ftl  Scanner-model.cml  Scanner-modelExpose.cml  Scanner-modelMC.cml  Scanner-modelMeasure.cml  domain-object-attribute-and-operation-tables.ftl
docs/: Doxyfile.in
include/: FiniteStateMachine.hpp  GenLogger.hpp  Uuid.cpp  Uuid.hpp  UuidGenerator.hpp
include/domain/base/: AggregateRootBase.hpp  EntityBase.hpp
include/infrastructure/base/: IRepositoryBase.h  IRepositoryFactory.h  IUnitOfWork.hpp  RepositoryFFSBase.h  RepositoryFactory.h  RepositoryHeapMemoryBase.h  RepositoryODMBase.h  RepositoryORMBase.h  UnitOfWork.hpp
latex/: annotated.tex  md_README.tex  refman.tex  structscanner_1_1generated_1_1Measurement.tex  structscanner_1_1generated_1_1Measurement__coll__graph.md5  structscanner_1_1generated_1_1Position.tex  structscanner_1_1generated_1_1WaferHeightMap.tex
models/: Scanner-model.cml
src/: build.sh  main.cpp  raftlib.pc
src/Expose/Expose/application/: AppComponent.hpp  Constants.hpp  DataReaderListenerImpl.cpp  DataReaderListenerImpl.h  Expose.cpp  Expose.hpp  ExposeCommand.hpp  ExposeController.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp  main.cpp
src/Expose/Expose/domain/: Exposure.cpp  Exposure.hpp  MarkMeasurement.cpp  Position.cpp  WaferHeightMap.cpp
src/Expose/Expose/infrastructure/kernels/: FeedForwardCalcUnit.hpp  LotOpDependentCalcUnit.hpp  PostLotOpDepCalcUnit.hpp  PredictUnit.hpp  RADependentCalcUnit.hpp
src/MachineControl/application/: MachineControl.cpp  MachineControl.hpp
src/MachineControl/domain/: Chuck.cpp  Chuck.hpp  ChuckStateTransitions.cpp  Lot.cpp  Lot.hpp  LotStateTransitions.cpp  Station.cpp  Station.hpp  StationStateTransitions.cpp  Wafer.cpp  Wafer.hpp  WaferScanner.hpp  WaferStateTransitions.cpp
src/Measure/Leveling/application/: AppComponent.hpp  Constants.hpp  Leveling.cpp  Leveling.hpp  LevelingCommand.hpp  LevelingController.hpp  MeasureWaferCommand.hpp  Runner.cpp  Runner.hpp  SwaggerComponent.hpp  main.cpp
src/Measure/Leveling/domain/: MarkMeasurement.cpp  MarkMeasurement.hpp  Measurement.cpp  Measurement.hpp  Position.cpp  Position.hpp  WaferHeightMap.cpp  WaferHeightMap.hpp
src/Measure/Leveling/infrastructure/: IWaferHeightMapRepository.hpp
src/Measure/Leveling/infrastructure/kernels/: MeasureJoinUnit.hpp  MeasureSplitUnit.hpp  MeasureUnit.hpp  PositionSetUnit.hpp
src/Measure/WaferAlignment/application/: WaferAlignment.hpp  WaferAlignmentCommand.hpp
src/Measure/WaferAlignment/domain/: AlignmentMark.hpp  MarkMeasurementSpecification.hpp  MarkPosition.hpp  WaferCoordinateSystem.hpp  WaferDisplacementCoordinates.hpp
src/Measure/WaferAlignment/infrastructure/: IWaferAlignmentMarkRepository.hpp
src/application/: MeasureWaferCommand.hpp
src/domain/: Measurement.hpp  Position.hpp  WaferHeightMap.hpp
src/domain/base/: AggregateBase.hpp  EntityBase.hpp  ValueObjectBase.hpp
src/infrastructure/: IWaferHeightMapRepository.hpp  WaferHeightMapRepository.hpp
src/infrastructure/base/: IRepositoryFactory.h  RepositoryFactory.h  RepositoryHeapMemoryBase.h  RepositoryORMBase.h
src/infrastructure/kernels/: MeasureUnit.hpp
